style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

input,
button {
  outline: none;
  border: none;
}

.menu li {
  list-style: none;
}

a {
  text-decoration: none;
}

img {
  max-width: 100%;
}

/* Color Variables */
:root {
  /* Primary Colors */
  --soft-orange: hsl(35, 77%, 62%);
  --soft-red: hsl(5, 85%, 63%);

  /* Neutral Colors */
  --off-white: hsl(36, 100%, 99%);
  --grayish-blue: hsl(233, 8%, 79%);
  --dark-grayish-blue: hsl(236, 13%, 42%);
  --very-dark-blue: hsl(240, 100%, 5%);

  --grid-gap: 1.6rem;
}

body {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  background: var(--off-white);
  overflow-x: hidden !important;
}

.container {
  max-width: 72rem; /* 1200px */
  margin: 0 auto;
  padding: 30px 20px 0;
}
@media (max-width: 767px) {
  .container {
    width: 93vw;
  }
}
/* Navbar */
nav {
  display: flex;
  justify-content: space-between;
  padding-top: 4.5rem !important; /* 55px */
}
.logo img {
  width: 3.5rem;
}
.menu {
  display: flex;
  gap: 2.18rem; /* 35px */
}
@media (max-width: 767px) {
  .menu {
    position: absolute;
    height: 100vh;
    width: 70vw;
    justify-content: center;
    padding-left: 30px;
    font-weight: bold;
    flex-direction: column;
    right: 0;
    top: 0;
    background: var(--off-white);
    box-shadow: 1px 10px 15px var(--grayish-blue);
    transform: translateX(120%);
    transition: 0.3s;
  }
  .menu-icon {
    display: block !important;
  }
  .menu.active {
    transform: translateX(0);
  }
}
.menu-icon {
  position: absolute;
  display: none;
  right: 15px;
  z-index: 10;
}
.menu li a {
  color: var(--dark-grayish-blue);
  transition: 0.3s;
}

.menu li a:hover {
  color: var(--soft-red);
}

/* Main Content */
.main-section.grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: var(--grid-gap);

  grid-template-areas:
    "hero hero new  "
    "hero hero new";
}
@media (max-width: 767px) {
  .main-section.grid {
    grid-template-columns: 1fr;
    grid-template-areas:
      "hero "
      "new";
  }
}

.hero-article {
  grid-area: hero;
}
aside {
  grid-area: new;
}
.hero-info {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: var(--grid-gap);
}
@media (max-width: 767px) {
  .hero-info {
    grid-template-columns: 1fr;
  }
}

.hero-info h1 {
  font-size: 3rem; /* 48px */
  padding-top: 0.75rem; /* 12px */
  max-width: 75%;
}
@media (max-width: 767px) {
  .hero-info h1 {
    max-width: 90%;
  }
}

.hero-info > div p {
  margin: 1.875rem 0; /* 30px */
  color: var(--dark-grayish-blue);
  line-height: 1.8;
  font-size: 0.93rem; /* 15px */
}

.hero-info .hero-button {
  padding: 0.93rem 1.25rem;
  background: var(--soft-red);
  font-weight: 900;
  text-transform: uppercase;
  letter-spacing: 0.3125rem;
  font-size: 0.75rem;
  cursor: pointer;
  transition: all 0.3s;
}
.hero-info .hero-button:hover {
  background: #000;
  color: white;
}
.new {
  background: var(--very-dark-blue);
  padding: 1.5625rem; /* 25px */
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

aside .new {
  height: 100%;
  padding: 1.875rem; /* 30px */
}

.new > h1 {
  color: var(--soft-orange);
  font-weight: bold;
  font-size: 2rem; /* 35px */
}

.new .new-topic {
  padding: 2.1875rem 0; /* 35px */
}

.new .new-topic:not(:last-child) {
  border-bottom: 1px solid var(--dark-grayish-blue);
}

.new .new-topic .topic-title {
  color: var(--off-white);
  transition: all 0.3s;
  cursor: pointer;
}
.new .new-topic .topic-title:hover {
  color: var(--soft-orange);
}
.new .new-topic .topic-description {
  color: var(--grayish-blue);
  margin-top: 0.6rem;
  font-size: 0.9rem;
  line-height: 1.6;
}
.main-articles {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: var(--grid-gap);
  padding: 4rem 0;
}
@media (max-width: 767px) {
  .main-articles {
    grid-template-columns: 1fr;
  }
}
.main-articles article {
  display: flex;
  gap: var(--grid-gap);
}
.main-articles article img {
  width: 6rem;
}
.main-articles > article div {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.main-articles .article-number {
  font-weight: bold;
  font-size: 1.7rem;
  color: var(--soft-red);
}
.main-articles .article-title {
  font-size: 1rem;
  transition: all 0.3s;
}
.main-articles .article-title:hover {
  color: var(--soft-red);
  cursor: pointer;
}

.main-articles .article-description {
  font-size: 0.9rem;
  color: var(--dark-grayish-blue);
  line-height: 1.5;
}

